--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name="com.ui.AccountActivity"
+            android:exported="false" />
+        <activity
             android:name="com.ui.auth.LoginActivity"
             android:exported="true">
             <intent-filter>
